hochauflösendes Testpng für das Erweiterungsmodul eingefügt

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -322,7 +322,7 @@ Enthält alle relevanten Informationen, die mit einem DataEvent geschickt werden
 
 \subsection{Erweiterungsmodul}
 \begin{center}
-	%%TODO \includesvg[width=0.8\textwidth]{bilder/ErweiterungsmodulTest.svg}
+	\includegraphics[width=0.8\textwidth]{bilder/ErweiterungsmodulTest.png}
 \end{center}
 	\subsubsection{Interface IManager}
 	\paragraph{Schnittstellenbeschreibung:}
