--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -119,7 +119,14 @@ hier kommt ein mal das Klassendiagramm rein mit Verweis auf den Anhang - valle
 %%\section{Klassenübersicht} brauchen wir nicht, da das bei uns schon alles im Inhaltsverzeichnis aufgelistet wird.
 \section{Klassenbeschreibung Model}
 \subsection{Bibliothek}
-\subsubsection{ Interface IEarablesConnetion}
+
+\begin{minipage}[b]{0.3\textwidth}
+	\subsubsection{Interface IEarablesConnection}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.7\textwidth}
+	\includegraphics[width=1.5\textwidth]{bilder/BibPackageKlassen/IEarablesConnection.png}
+\end{minipage}
 
 \paragraph{Klassenbeschreibung:}
 Diese Klasse ist das Herz der Bibliothek. Sie ist die Schnittstellen, über die später kommuniziert werden kann. Hierbei handelt es sich um ein Interface um Mocking zu ermöglichen und so das Implementieren und Testen zu vereinfachen. Um eine BLE Verbindung herzustellen benutzt sie das \glqq Bluetooth LE Plugin for Xamarin\grqq{}.
@@ -157,13 +164,26 @@ Diese Klasse ist das Herz der Bibliothek. Sie ist die Schnittstellen, über die 
 
 
 
-\subsubsection{Class EarablesConnetion}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class EarablesConnection}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/EarablesConnection.png}
+\end{minipage}
 
 \paragraph{Klassenbeschreibung:}
-Die Klasse EarablesConnection implementiert das IEarablesConnection Interface und ist die konkrete Klasse, die sich um die BLE-Verbindung kümmert.
+Die Klasse EarablesConnection implementiert das IEarablesConnection Interface und ist die konkrete Klasse, die sich um die BLE-Verbindung kümmert.\\
 
 
-\subsubsection{Static Class Constants}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Static Class Constants}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=1.4\textwidth]{bilder/BibPackageKlassen/Constants.png}
+\end{minipage}
+
 \paragraph{Klassenbeschreibung:}
 Die Constants Klasse enthält alle Konstanten, die benötigt werden um die entsprechenden Service und Charakteristiken aus den \Gls{Earables} zu lesen. Sie ist als static gekennzeichnet da es keinen Sinn macht sie zu instanziieren, da sie nur Konstanten bereitstellt.
 
@@ -178,7 +198,15 @@ Die Constants Klasse enthält alle Konstanten, die benötigt werden um die entsp
 \end{itemize}
 
 
-\subsubsection{Class LPF\_Gyroscope}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class LPF\_Gyroscope}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/LPF_Gyrosope.png}
+\end{minipage}
+
+\paragraph{Klassenbeschreibung:}
 Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für das Gyroscope annehmen kann.
 
 \paragraph{Attribute:}
@@ -195,7 +223,14 @@ Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für d
 \end{itemize}
 
 
-\subsubsection{Class LPF\_Accelerometer}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class LPF\_Accelerometer}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/LPF_Accelerometer.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für das Accelerometer annehmen kann.
 
 \paragraph{Attribute:}
@@ -211,7 +246,15 @@ Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für d
 \end{itemize}
 
 
-\subsubsection{Class ConfigContainer}
+
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class ConfigContainer}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/ConfigContainer.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Diese Klasse beinhaltet alle Einstellungsmöglichkeiten für die \Gls{Earables}.
 
 \paragraph{Attribute:}
@@ -222,7 +265,14 @@ Diese Klasse beinhaltet alle Einstellungsmöglichkeiten für die \Gls{Earables}.
 \end{itemize}
 
 
-\subsubsection{Static Class IMUDataExtractor}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Static Class IMUDataExtractor}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/IMUDataExtractor.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Diese Klasse Übernimmt das Umwandeln des Bit Strings in vernünftige Werte und Einheiten.
 Die Klasse wurde erstellt um dem IEarablesConnection Interface Arbeit abzunehmen und Logik zu entkoppeln, so dass sich das IEarablesConnection
 Interface nur um die Kommunikation mit den \Gls{Earables} kümmern muss. Sie ist static da es keinen Sinn macht sie zu instanziieren, da sie nur einen Dienst anbietet.
@@ -233,7 +283,14 @@ Interface nur um die Kommunikation mit den \Gls{Earables} kümmern muss. Sie ist
 \end{itemize}
 
 
-\subsubsection{Class IMUDataEntry}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class IMUDataEntry}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/IMUDataEntry.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Diese Klasse besitzt alle ausgewerteten Informationen, die in einem „Packet“ von den \Gls{Earables} ankommen.
 
 \paragraph{Attribute:}
@@ -243,7 +300,16 @@ Diese Klasse besitzt alle ausgewerteten Informationen, die in einem „Packet“
 \end{itemize}
 
 
-\subsubsection{Class Gyroscope}
+
+
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class Gyroscope}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/Gyroscope.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Diese Klasse besitzt alle ausgewerteten Gyroskopdaten.
 
 \paragraph{Attribute:}
@@ -254,7 +320,14 @@ Diese Klasse besitzt alle ausgewerteten Gyroskopdaten.
 \end{itemize}
 
 
-\subsubsection{Class Accelerometer}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class Accelerometere}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/Accelerometer.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
 
 \paragraph{Attribute:}
@@ -268,7 +341,15 @@ Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
 \end{itemize}
 
 
-\subsubsection{Class Characteristics}
+
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class Characteristics}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/Characteristics.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 In dieser Klasse werden die Charakteristiken gespeichert um sie nicht jedes mal neu zu laden wenn sie gebraucht werden. Der Datentyp ICharacteristic befindet sich in dem BLE-Plugin.
 
 \paragraph{Attribute:}
@@ -281,7 +362,14 @@ In dieser Klasse werden die Charakteristiken gespeichert um sie nicht jedes mal 
 \end{itemize}
 
 
-\subsubsection{Class DeviceEventArgs}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class DeviceEventArgs}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/DeviceEventArgs.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Enthält alle relevanten Informationen, die als Parameter mit dem Event DeviceConnectionStateChanged gefeuert werden.
 
 \paragraph{Attribute:}
@@ -296,11 +384,26 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event DeviceCo
 \end{itemize}
 
 
-\subsubsection{Class ButtonEventArgs}
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class ButtonEventArgs}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/ButtonEventArgs.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Enthält alle relevanten Informationen, die als Parameter mit dem Event ButtonPressed gefeuert werden. Momentan ist diese Klasse leer, aber sie existiert bereits falls bei der Weiterentwicklung des Moduls doch Argumente übergeben werden müssen.
 
 
-\subsubsection{Class DataEventArgs}
+
+\begin{minipage}[b]{0.5\textwidth}
+	\subsubsection{Class DataEventArgs}
+	
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/DataEventArgs.png}
+\end{minipage}
+\paragraph{Klassenbeschreibung:}
 Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataRecieved gefeuert werden.
 
 \paragraph{Attribute:}
